--- a/login.html
+++ b/login.html
@@ -39,27 +39,34 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="page-header align-content-center">
-            <img src="img/login.png" class="img-fluid" style="width:50%" alt="Responsive image">
-        </div>
 
-        <div class="container"></div>
-        <div class="card-container">
-            <img id="profile-img" class="profile-img-card" src="/img/tipitoLogin.png" />
-            <form class="form-signin">
-                <span class="reauth-email"></span>
-                <input type="email" id="logIn" class="form-control" placeholder="Ingrese su Usuario" required autofocus>
-                <input type="password" id="logPass" class="form-control" placeholder="Contraseña" required>
-                <div class="checkbox text-left">
-                    <div>
-                        <input type="checkbox" value="remember-me"> Recordarme
-                    </div>
-                </div>
-                <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
-            </form>
-        </div>
+
+    <div class="container">
+        <form action="#" id="formLogin" method="POST">
+
+            <div class="text-center">
+                <img src="img/login.png" class="rounded" alt="Responsive image">
+            </div>
+
+            <br>
+            <div class="form-group">
+                <input type="text" class="form-control" id="usuario" name="usuario" placeholder="Usuario" required>
+
+            </div>
+            <div class="form-group">
+
+                <input type="password" class="form-control" id="pass" name="pass" placeholder="Contraseña" required>
+            </div>
+            <div class="form-check">
+                <input type="checkbox" id="recordarme" name="recordarme" value="1">
+                <label for="recordarme" class="form-check-label" for="exampleCheck1">Recordarme</label>
+            </div>
+            <div class="text-center">
+                <input type="submit" value="Enviar" class="btn btn-primary">
+            </div>
+        </form>
     </div>
+
 
 
 
