--- a/login.html
+++ b/login.html
@@ -41,30 +41,29 @@
 <body>
 
 
-    <div class="container">
-        <form action="#" id="formLogin" method="POST">
+    <div class="container signin">
+        <div class="abs-center">
+            <div class="">
+                <form action="#" id="formLogin" class="" method="POST">
 
-            <div class="text-center">
-                <img src="img/login.png" class="rounded" alt="Responsive image">
-            </div>
+                    <img src="img/login.png" class="signin" alt="Responsive image">
 
-            <br>
-            <div class="form-group">
-                <input type="text" class="form-control" id="usuario" name="usuario" placeholder="Usuario" required>
-
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="usuario" name="usuario" placeholder="Usuario" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control" id="pass" name="pass" placeholder="Contraseña" required>
+                    </div>
+                    <div class="form-check">
+                        <input type="checkbox" id="recordarme" name="recordarme" value="1">
+                        <label for="recordarme" class="form-check-label" for="exampleCheck1">Recordarme</label>
+                    </div>
+                    <div class="text-center">
+                        <input type="submit" value="Enviar" class="btn btn-primary signin">
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-
-                <input type="password" class="form-control" id="pass" name="pass" placeholder="Contraseña" required>
-            </div>
-            <div class="form-check">
-                <input type="checkbox" id="recordarme" name="recordarme" value="1">
-                <label for="recordarme" class="form-check-label" for="exampleCheck1">Recordarme</label>
-            </div>
-            <div class="text-center">
-                <input type="submit" value="Enviar" class="btn btn-primary">
-            </div>
-        </form>
+        </div>
     </div>
 
 
