--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
             <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
             <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+            <a class="py-2 d-none d-md-inline-block alert-light" id="usuario"></a>
         </div>
     </nav>
     <main role="main">
