todo terminado y funcionando para entrega 2 30/8/2020 podria mejorarse un poco lo grafico

--- a/products.html
+++ b/products.html
@@ -36,18 +36,23 @@
 
                 <div class="input-group mb-3 input-group-prepend">
                     <div class="input-group-prepend">
-                        <span class="input-group-text">$</span>
+                        <span class="input-group-text">U$D</span>
                     </div>
                     <input id="precioInicio" name="precioInicio" type="number" class="form-control">
 
                     <div class="input-group-prepend">
-                        <span class="input-group-text">$</span>
+                        <span class="input-group-text">U$D</span>
                     </div>
                     <input id="precioFin" name="precioFin" type="number" class="form-control">
                     <input class="btn btn-outline-primary" type="submit" id="button-addon2" value="Filtrar"></input>
 
                 </div>
             </form>
+
+            <p>
+                <button class="btn btn-large btn-primary" id="btnOrdenPrecio" type="button">Orden Precio</button>
+                <button class="btn btn-large btn-secondary" id="btnOrdenRelevancia" type="button">Orden Relevancia</button>
+            </p>
         </div>
 
         <div class="container-fluid">
@@ -70,7 +75,6 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
     <script src="js/products.js"></script>
-    <script src="js/categories.js"></script>
 </body>
 
 </html>
