--- a/products.html
+++ b/products.html
@@ -23,7 +23,7 @@
             <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
             <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
             <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-            <a class="py-2 d-none d-md-inline-block alert-light" id="usuario"></a>
+            <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="usuario"></a>
         </div>
     </nav>
 
@@ -48,6 +48,18 @@
 
                 </div>
             </form>
+
+
+
+            <div class="input-group mb-3 input-group-prepend">
+
+                <div class="input-group-prepend">
+                    <span class="input-group-text">Buscar</span>
+                </div>
+                <input id="search" type="text" class="form-control" onkeyup="liveSearch();"></input>
+
+            </div>
+
 
             <p>
                 <button class="btn btn-large btn-primary" id="btnOrdenPrecio" type="button">Orden Precio</button>
