--- a/products.html
+++ b/products.html
@@ -56,11 +56,15 @@
         </div>
 
         <div class="container-fluid">
-            <div>
-                <div class="list-group-item" id="prod-list-container">
+            <form action="./product-info.html" id="formSelect" class="" method="GET">
+                <div>
+                    <div class="list-group-item" id="prod-list-container">
+                    </div>
                 </div>
-            </div>
+            </form>
         </div>
+
+        <script id="scriptSelect" type="text/javascript"></script>
     </nav>
     </footer>
     <div id="spinner-wrapper">
