cambios hechos toma la poscicion 0 no me da el tiempo de terminar

--- a/product-info.html
+++ b/product-info.html
@@ -36,10 +36,14 @@
         </div>
     </div>
 
+    <h1>Informacion del producto</h1>
     <div>
-        <h1>Informacion del producto</h1>
-        <div class="container p-5" id="contImg">
+        <div class="list-group-item" id="prod-detail-container">
         </div>
+    </div>
+
+    <div>
+
         <div class="imgnumbers">
             <label id="boton1">
                 <input type="button" id="1" value="1">
