Todo mas o menos pronto para entrega 4 medio desprolijo y algo forzado

--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
             <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
             <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
             <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-            <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-            <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="usuario"></a>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="usuario"></a>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="cart.html">Carrito</a>
+                    <a class="dropdown-item" href="my-profile.html">Perfil</a>
+                    <a class="dropdown-item" href="login.html">Log Out</a>
+                </div>
+            </div>
         </div>
     </nav>
     <main role="main">
