--- a/cart.html
+++ b/cart.html
@@ -54,11 +54,24 @@
         </div>
     </nav>
     <div class="container p-5">
-        <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-            <h4 class="alert-heading">¡A trabajar! :)</h4>
-            <p>Esta sección corresponde a: Entrega 5 (Fecha de entrega: 11/10/2020) y Entrega 6 (Fecha de entrega: 25/10/2020).</p>
-            <hr>
-            <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+        <div class="container">
+            <!-- Page Heading -->
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="page-header">Carro de Compras</h1>
+                </div>
+            </div>
+            <!-- /.row -->
+
+            <div>
+
+                <!-- Cart Table -->
+                <div id="carrito" class="row">
+
+                </div>
+
+            </div>
+
         </div>
     </div>
     <div id="spinner-wrapper">
